runFormatTest(import.meta, ["yaml"], { requirePragma: true });
