// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-pragma.yml - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
requirePragma: true
                                                      printWidth: 80 (default) |
=====================================input======================================
# @prettier

    123

=====================================output=====================================
# @prettier

123

================================================================================
`;

exports[`without-pragma.yml - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
requirePragma: true
                                                      printWidth: 80 (default) |
=====================================input======================================


    123

=====================================output=====================================


    123

================================================================================
`;
